--- a/pages/deployment/frontend/nextjs.mdx
+++ b/pages/deployment/frontend/nextjs.mdx
@@ -6,19 +6,18 @@ description: "Discover how to deploy Next.js applications seamlessly with Cloudi
 import Head from 'next/head';
 
 <Head>
-
   <meta name="description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
-  <meta property="og:title" content="Introduction to Cloudinator" />
+  <meta property="og:title" content="Next.js Deployment - Cloudinator" />
   <meta property="og:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
-  <meta property="og:image" content="/images/cloudinator-logo.jpg" />
+  <meta property="og:image" content="/programming/nextjs.png" />
   <meta property="og:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://cloudinator-document.soben.me/" />
+  <meta property="og:url" content="https://docs.cloudinator.cloud/deployment/frontend/react" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Introduction to Cloudinator" />
+  <meta name="twitter:title" content="Next.js Deployment - Cloudinator" />
   <meta name="twitter:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
-  <meta name="twitter:image" content="/images/cloudinator-logo.jpg" />
+  <meta name="twitter:image" content="/programming/nextjs.png" />
   <meta name="twitter:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
 </Head>
 
