--- a/pages/resource/spring-microservice/spring-boot.mdx
+++ b/pages/resource/spring-microservice/spring-boot.mdx
@@ -8,15 +8,15 @@ import Head from 'next/head';
 <Head>
 
   <meta name="description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
-  <meta property="og:title" content="Introduction to Cloudinator" />
+  <meta property="og:title" content="Spring Boot - Cloudinator" />
   <meta property="og:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
   <meta property="og:image" content="/programming/spring.png" />
   <meta property="og:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://docs.cloudinator.cloud/resource/spring-microservice/spring-boot" />
+  <meta property="og:url" content="https://docs.cloudinator.cloud/deployment/frontend/html" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Introduction to Cloudinator" />
+  <meta name="twitter:title" content="Spring Boot - Cloudinator" />
   <meta name="twitter:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
   <meta name="twitter:image" content="/programming/spring.png" />
   <meta name="twitter:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
@@ -182,9 +182,19 @@ Spring Boot's DevTools module enhances the developer experience by enabling feat
 - **File Watch Configuration**
 - **performance Considerations**
 
+##### <span className="text-gray-500 font-semibold">Integration with Spring Ecosystem</span>
 **8. Integration with Spring Ecosystem**
 
 Spring Boot seamlessly integrates with other Spring projects, such as Spring Data, Spring Security, and Spring Batch, providing a cohesive development experience.
+
+- **Spring Data Integration**
+- **Spring Security Integration**
+- **Spring Cloud Integration**
+- **Spring Batch Integration**
+- **Spring WebFlux Integration**
+- **Spring Cache Integration**
+- **Spring Messaging Integration**
+- **Spring Testing Integration**
 
 ###  <span className="text-purple-500 font-semibold">Benefits of Using Spring Boot</span>
 
