--- a/pages/deployment/frontend/nuxt.mdx
+++ b/pages/deployment/frontend/nuxt.mdx
@@ -8,17 +8,17 @@ import Head from 'next/head';
 <Head>
 
   <meta name="description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
-  <meta property="og:title" content="Introduction to Cloudinator" />
+  <meta property="og:title" content="Nuxt.js Deployment - Cloudinator" />
   <meta property="og:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
-  <meta property="og:image" content="/images/cloudinator-logo.jpg" />
+  <meta property="og:image" content="/programming/nuxt.png" />
   <meta property="og:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://cloudinator-document.soben.me/" />
+  <meta property="og:url" content="https://docs.cloudinator.cloud/deployment/frontend/nuxt" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Introduction to Cloudinator" />
+  <meta name="twitter:title" content="Nuxt.js Deployment - Cloudinator" />
   <meta name="twitter:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
-  <meta name="twitter:image" content="/images/cloudinator-logo.jpg" />
+  <meta name="twitter:image" content="/programming/nuxt.png" />
   <meta name="twitter:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
 </Head>
 
