add new page about tutorial

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -25,22 +25,22 @@ import Head from 'next/head';
 import Introduction from '../components/Introduction'
 import DocHero from '../components/introduction/DocHero'
 
-# <span className="text-purple-700 font-bold">Cloudinator</span>
+# <span className="text-purple-700 font-bold text-center">Cloudinator</span>
 <span className="text-gray-700 dark:text-gray-300">Say Goodbye to <strong>Manual</strong>, Say hello to <strong>Automation</strong>!</span>
 
 <DocHero />
 
-## <span className="text-purple-500 font-bold">Overview</span>
+## <span className="text-purple-500 font-bold">📌 Overview</span>
 **Cloudinator** is a comprehensive deployment and management platform designed to streamline the process of application deployment for businesses and developers. It supports both monolithic and microservices architectures and offering customizable domain management.
 
-## <span className="text-purple-500 font-bold">Objective</span>
+## <span className="text-purple-500 font-bold">📌 Objective</span>
 This Guide will show you how to use this **Cloudinator** platform for deploy service both monolothic and spring microservice
 
 - Getting familar with cloudinator
 - Learn tutorial step by step of deployment
 - How to create deployment service
 
-## <span className="text-purple-500 font-bold">Tutorial Video</span>
+## <span className="text-purple-500 font-bold">📌 Tutorial Video</span>
 Here is a quick introduction video about cloudinator:
 
 <div style={{ display: 'flex', justifyContent: 'center', margin: '20px 0' }}>
