--- a/pages/tutorial.mdx
+++ b/pages/tutorial.mdx
@@ -1,5 +1,5 @@
 ## <span className="text-purple-700 font-bold">Tutorial</span>
 
-import InteractiveComingSoon from '@/components/InteractiveComingSoon';
+import TutorialPage from '../components/TutorialPage'
 
-<InteractiveComingSoon />
+<TutorialPage />
