--- a/pages/contact.mdx
+++ b/pages/contact.mdx
@@ -24,7 +24,7 @@ import Head from 'next/head';
 import {SubmitButton} from "../components/contact/SubmitButton";
 import {FormInput} from "../components/contact/FormInput";
 
-## <span className="text-purple-700 font-bold">Contact Us</span>
+## <span className="text-purple-700 font-bold">📌 Contact Us</span>
 
 We would love to hear from you! Please fill out the form below to get in touch with our team.
 
@@ -58,7 +58,7 @@ We would love to hear from you! Please fill out the form below to get in touch w
     <SubmitButton>Send Message</SubmitButton>
 </form>
 
-## <span className="text-purple-700 font-bold">Other Ways to React Us</span>
+## <span className="text-purple-700 font-bold">📌 Other Ways to React Us</span>
 
 - **Email**: cloudinator@email.com
 - **Phone**: +885 127 856 148
