--- a/pages/getting-started.mdx
+++ b/pages/getting-started.mdx
@@ -28,7 +28,7 @@ import GettingStarted from '../components/GettingStarted'
 
 Welcome to the Cloudinator getting started guide. This document will help you set up Cloudinator and guide you through basic usage.
 
-## <span className="text-purple-500 font-bold">Prerequisites</span>
+## <span className="text-purple-500 font-bold">📌 Prerequisites</span>
 
 Before you begin, ensure you have the following:
 - Operating System (Windows, macOS, or Linux)
