modify and add new UI in community page

--- a/pages/community.mdx
+++ b/pages/community.mdx
@@ -1,5 +1,5 @@
 ## <span className="text-purple-700 font-bold">Community</span>
 
-import InteractiveComingSoon from '@/components/InteractiveComingSoon';
+import CommunityPage from '../components/community/CommunityPage'
 
-<InteractiveComingSoon />
+<CommunityPage />
