add content in community page & create new blog page

--- a/pages/community.mdx
+++ b/pages/community.mdx
@@ -1,5 +1,12 @@
 ## <span className="text-purple-700 font-bold">Community</span>
 
-import CommunityPage from '../components/community/CommunityPage'
+import BannerCarousel from '@/components/community/BannerCarousel'
+
+<div className="container mx-auto py-8">
+    <h1 className="text-3xl font-bold mb-6 text-center text-purple-500">Cloudinator Community</h1>
+    <BannerCarousel />
+</div>
+
+import CommunityPage from '@/components/community/CommunityPage'
 
 <CommunityPage />
