add metadata in tutorial page

--- a/pages/tutorial.mdx
+++ b/pages/tutorial.mdx
@@ -1,3 +1,26 @@
+---
+title: "Tutorial"
+description: "Discover how to deploy Next.js applications seamlessly with Cloudinator. This guide provides step-by-step instructions to leverage Cloudinator's advanced DevOps features, enabling efficient, secure, and scalable deployments for your projects, whether on-premises or in the cloud."  
+---
+
+import Head from 'next/head';
+
+<Head>
+  <meta name="description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:title" content="Tutorial Deployment - Cloudinator" />
+  <meta property="og:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:image" content="/programming/nextjs.png" />
+  <meta property="og:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://docs.cloudinator.cloud/deployment/frontend/react" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Tutorial - Cloudinator" />
+  <meta name="twitter:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta name="twitter:image" content="/programming/nextjs.png" />
+  <meta name="twitter:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
+</Head>
+
 ## <span className="text-purple-700 font-bold">Tutorial</span>
 
 import TutorialPage from '../components/tutorial/TutorialPage'
