modify and remove unused feature

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,25 +1,23 @@
 ---
 title: "Introduction to Cloudinator"
-description: "Cloudinator is an innovative DevOps platform designed to streamline software development, deployment, and infrastructure management. It empowers development teams by providing tools to automate workflows, enhance collaboration, and deliver software faster with greater reliability. Cloudinator bridges the gap between development and operations teams, offering sea  mless CI/CD pipelines, robust monitoring, and infrastructure-as-code capabilities. By integrating with popular tools like Kubernetes, Docker, and Git, Cloudinator ensures a flexible and scalable solution tailored to modern software engineering needs. Key features include real-time collaboration, automated testing and deployment, security auditing, and environment orchestration, making it the go-to platform for agile and DevOps practitioners. Whether you’re deploying microservices or managing enterprise-scale applications, Cloudinator accelerates your journey to cloud-native and DevOps maturity."
+description: "Cloudinator is a DevOps platform that streamlines software development, deployment, and infrastructure management with automated CI/CD pipelines, monitoring, and infrastructure-as-code capabilities."
 ---
 
 import Head from 'next/head';
 
 <Head>
 
-  <meta name="description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta name="description" content="Cloudinator - DevOps platform for automated deployment and infrastructure management." />
   <meta property="og:title" content="Introduction to Cloudinator" />
-  <meta property="og:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta property="og:description" content="Cloudinator - DevOps platform for automated deployment and infrastructure management." />
   <meta property="og:image" content="/images/cloudinator-logo.jpg" />
-  <meta property="og:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://docs.cloudinator.cloud/" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Introduction to Cloudinator" />
-  <meta name="twitter:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
+  <meta name="twitter:description" content="Cloudinator - DevOps platform for automated deployment and infrastructure management." />
   <meta name="twitter:image" content="/images/cloudinator-logo.jpg" />
-  <meta name="twitter:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
 </Head>
 
 import Introduction from '../components/Introduction'
@@ -31,17 +29,14 @@ import DocHero from '../components/introduction/DocHero'
 <DocHero />
 
 ## <span className="text-purple-500 font-bold">📌 Overview</span>
-**Cloudinator** is a comprehensive deployment and management platform designed to streamline the process of application deployment for businesses and developers. It supports both monolithic and microservices architectures and offering customizable domain management.
+**Cloudinator** streamlines application deployment for monolithic and microservices architectures with customizable domain management.
 
-## <span className="text-purple-500 font-bold">📌 Objective</span>
-This Guide will show you how to use this **Cloudinator** platform for deploy service both monolothic and spring microservice
+## <span className="text-purple-500 font-bold">📌 What You'll Learn</span>
+- Platform fundamentals
+- Step-by-step deployment tutorials
+- Creating deployment services
 
-- Getting familar with cloudinator
-- Learn tutorial step by step of deployment
-- How to create deployment service
-
-## <span className="text-purple-500 font-bold">📌 Tutorial Video</span>
-Here is a quick introduction video about cloudinator:
+## <span className="text-purple-500 font-bold">📌 Quick Start Video</span>
 
 <div style={{ display: 'flex', justifyContent: 'center', margin: '20px 0' }}>
   <iframe
@@ -54,5 +49,3 @@ Here is a quick introduction video about cloudinator:
     style={{ border: '1px solid #ccc', borderRadius: '8px' }}
   ></iframe>
 </div>
-
-{/* <Introduction /> */}
