--- a/pages/installation.mdx
+++ b/pages/installation.mdx
@@ -3,17 +3,27 @@ title: "Installation"
 description: "Learn how to install and set up services in Cloudinator, a comprehensive DevSecOps platform."
 ---
 
-import Head from 'next/head';
+import Head from "next/head";
 
 <Head>
 
-  <meta name="description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
-  <meta property="og:title" content="Introduction to Cloudinator" />
-  <meta property="og:description" content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management." />
-  <meta property="og:image" content="/images/cloudinator-logo.jpg" />
-  <meta property="og:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://cloudinator-document.soben.me/" />
+{" "}
+<meta
+  name="description"
+  content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management."
+/>
+<meta property="og:title" content="Introduction to Cloudinator" />
+<meta
+  property="og:description"
+  content="Cloudinator is a powerful DevOps platform streamlining software development, deployment, and infrastructure management."
+/>
+<meta property="og:image" content="/images/cloudinator-logo.jpg" />
+<meta
+  property="og:image:alt"
+  content="Cloudinator: The Ultimate DevOps Platform"
+/>
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://cloudinator-document.soben.me/" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Introduction to Cloudinator" />
@@ -22,18 +32,19 @@ import Head from 'next/head';
   <meta name="twitter:image:alt" content="Cloudinator: The Ultimate DevOps Platform" />
 </Head>
 
-import {FrameworksGrid} from "@/components/FrameworksGrid";
+import { FrameworksGrid } from "@/components/FrameworksGrid";
 
 # <span className="text-purple-700 font-bold">Installation</span>
 
 Select service you want to deploy
 
 <div className="max-w-5xl mx-auto px-4 py-6">
-    <div className="space-y-6 mt-6">
-        <div className="space-y-4">
-            <h2 className="text-2xl font-semibold tracking-tight text-purple-500">Frameworks</h2>
-            <FrameworksGrid />
-        </div>
+  <div className="space-y-6 mt-6">
+    <div className="space-y-4">
+      <h2 className="text-2xl font-semibold tracking-tight text-purple-500">
+        Frameworks
+      </h2>
+      <FrameworksGrid />
     </div>
+  </div>
 </div>
-
